--- a/blog.html
+++ b/blog.html
@@ -15,47 +15,47 @@
         <div class="nav-brand"><a href="#">Naveen Lagishetty</a></div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a class="link link-active" href="#">Home</a>
+                <a class="link" href="index.html">Home</a>
             </li>
             <li class="list-item-inline">
                 <a class="link" href="projects.html">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a class="link" href="blog.html">Blogs</a>
+                <a class="link link-active" href="#">Blogs</a>
             </li>
         </ul>
     </nav>
 
     <header class="header">
         <!-- theme color - #14b8a6 -->
-        <img class="header-img" src="user-image1.png">
-        <h1 class="header-heading">I am Naveen Lagishetty the <span class="heading-inverted">Web Developer</span></h1>
+        <img class="header-img" src="user-image3.png">
+        <h1 class="header-heading">I am Naveen Lagishetty <span class="heading-inverted">read my blogs</span></h1>
     </header>
 
     <section class="section section-off-white">
         <div class="container container-center">
-            <h1>Technologies</h1>
-            <p>I'm familiar with <strong>HTML5, CSS3, Git, JavaScript, ReactJS, NodeJS</strong> and <strong>Web
-                    Hosting</strong></p>
+            <h1>Dummy Blog One</h1>
+            <small>March 2021</small>
+            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin words.</p>
         </div>
     </section>
     <section class="section">
         <div class="container container-center">
-            <h1>Projects</h1>
-            <p>I like to showcase my work, you can see my projects hosted online. Shared both live projects and source
-                code so that anyone can learn from it.</p>
+            <h1>Dummy Blog Two</h1>
+            <small>November 2021</small>
+            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin words.</p>
             <div class="button-center">
-                <a class="link link-primary" href="projects.html" target="_blank">Browse Projects</a>
+                <a class="link link-primary" href="#">Readmore</a>
             </div>
         </div>
     </section>
     <section class="section section-off-white">
         <div class="container container-center">
-            <h1>Blogs</h1>
-            <p>I'm also working on some technical blogs to share the knowledge about technology, development,
-                programming concepts.</p>
+            <h1>Dummy Blog Three</h1>
+            <small>April 2022</small>
+            <p>The most well-known dummy text is the 'Lorem Ipsum', which is said to have originated in the 16th century. Lorem Ipsum is composed in a pseudo-Latin language which more or less corresponds to 'proper' Latin. It contains a series of real Latin words.</p>
             <div class="button-center">
-                <a class="link link-secondary" href="blog.html" target="_blank">Read Blogs</a>
+                <a class="link link-secondary" href="#">Readmore</a>
             </div>
         </div>
     </section>
