--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
             <small>March, 2022</small>
             <p>Play with Text - My First Website hosted online, built it using HTML5, CSS3, JavaScript.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://play-with-text1.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://play-with-text1.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Play-with-text" target="_blank">View Code</a>
             </div>
         </div>
@@ -72,7 +72,7 @@
             <small>March, 2022</small>
             <p>A website to showcase all my projects, activities and blogs. I keep updating my portfolio.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://naveen-portfolio10.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://naveen-portfolio10.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/PortfolioRepo" target="_blank">View Code</a>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <small>March, 2022</small>
             <p>Added some dummy blogs to my portfolio, check out blogs. Built it using HTML5, CSS3.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://blog1000.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://blog1000.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Blog" target="_blank">View Code</a>
             </div>
         </div>
@@ -96,7 +96,7 @@
             <small>April, 2022</small>
             <p>Are you a fan of minions? Use this translator to convert your text from English to Minion speak or Banana language. I built it using HTML5, CSS3, vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://talk-banana10.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://talk-banana10.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Talk-banana" target="_blank">View Code</a>
             </div>
         </div>
@@ -109,7 +109,7 @@
             <small>April, 2022</small>
             <p>Don't understand groot Language? This translator will convert English to groot language. I built it using HTML5, CSS3, vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://groot-translator10.netlify.app/">Play Quiz</a>
+                <a class="link link-primary" href="https://groot-translator10.netlify.app/">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Groot-Translator">View Code</a>
             </div>
         </div>
@@ -120,7 +120,7 @@
             <small>April, 2022</small>
             <p>A food-interpreter website to translate food emojis, built in HTML5, CSS3, ReactJS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://csb-jfyqru.netlify.app/">Play Quiz</a>
+                <a class="link link-primary" href="https://csb-jfyqru.netlify.app/">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Food-Interpreter">View Code</a>
             </div>
         </div>
@@ -133,7 +133,7 @@
             <small>May, 2022</small>
             <p>A web app to checkout my music recommendations, built in HTML5, CSS3, ReactJS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://csb-g4bqlm.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://csb-g4bqlm.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Best-Music-Recommendation" target="_blank">View Code</a>
             </div>
         </div>
@@ -144,7 +144,7 @@
             <small>May, 2022</small>
             <p>A web app that helps the user by telling how can he/she return the change to the customer with minimum number of notes, built in HTML5, CSS3, Vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://cash-register-manager10.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://cash-register-manager10.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Cash-Registor-Manager" target="_blank">View Code</a>
             </div>
         </div>
@@ -158,7 +158,7 @@
             <small>May, 2022</small>
             <p>A website which takes user birthdate & lucky number as input & tells if his birthdate is lucky or not, built in HTML5, CSS3, Vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://birthday-lucky10.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://birthday-lucky10.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Birthday-lucky" target="_blank">View Code</a>
             </div>
         </div>
@@ -169,7 +169,7 @@
             <small>Auguest, 2022</small>
             <p>A web app to check whether your birthday is palindrome or not also, it will tell you the nearest palindrome date and by how many days you missed it. Built in HTML5, CSS3, Vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://palindrome-birthday10.netlify.app/" target="_blank">Play Quiz</a>
+                <a class="link link-primary" href="https://palindrome-birthday10.netlify.app/" target="_blank">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Palindrome-birthday" target="_blank">View Code</a>
             </div>
         </div>
@@ -182,7 +182,7 @@
             <small>Auguest, 2022</small>
             <p>Don't understand groot Language? This translator will convert English to groot language. I built it using HTML5, CSS3, vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://groot-translator10.netlify.app/">Play Quiz</a>
+                <a class="link link-primary" href="https://groot-translator10.netlify.app/">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Groot-Translator">View Code</a>
             </div>
         </div>
@@ -193,7 +193,7 @@
             <small>Auguest, 2022</small>
             <p>A website which helps user how much profit or loss he/she is making in percentage & absolute value. Built in HTML5, CSS3, Vanilla JS.</p>
             <div class="button-center">
-                <a class="link link-primary" href="https://profit-loss10.netlify.app/">Play Quiz</a>
+                <a class="link link-primary" href="https://profit-loss10.netlify.app/">Live Project</a>
                 <a class="link link-secondary" href="https://github.com/naveen-developer/Profit-Loss">View Code</a>
             </div>
         </div>
